--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   "networkAccess": {
     "allowedDomains": [
       "https://gesture-pilot.vercel.app",
-      "https://gesture-pilot-relay.vercel.app"
+      "gesture-pilot-relay.vercel.app"
     ]
   }
 }
